--- a/index.html
+++ b/index.html
@@ -1097,5 +1097,6 @@ cookieはTLD+1をこえることはできない
         slideshow.togglePresenterMode()
       }
     </script>
+    <script type="text/javascript">(function(){var t,n,r,e,i;for(t=function(){var t;return t=[],function(){var n,r,e,i;for(r=["init","start","stop","user","track","action","event","goal","chat","buy","page","view","admin","group","alias","ready","link","form","click","submit","cmd","emit","on","send","css","js","style","option","get","set","collection"],n=function(n){return function(){return t.push([n].concat(Array.prototype.slice.call(arguments,0)))}},e=0,i=[];e<r.length;)t[r[e]]=n(r[e]),i.push(e++);return i}(),t.init=function(n,r){return t.api_key=n,t.options=r||{}},t},e=window.karte_tracker_names||["tracker"],n=0,r=e.length;r>n;n++)i=e[n],window[i]||(window[i]=t())}).call(this);</script><script type="text/javascript" src="https://static.karte.io/libs/tracker.js"></script><script type="text/javascript">tracker.init("73836f0a7f9b2161cb78d5295dfc21c7", {subdomain: true})</script>
   </body>
 </html>
