--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@ h1, h2, h3 {
   line-height: 1.0em;
   text-shadow: 0 0 20px #333;
 }
-.logo img {
+.remark-slide-content .logo img {
   width: 20%;
 }
-.half img {
+.remark-slide-content .half img {
   width: 45%;
 }
-img {
+.remark-slide-content img {
   width: 100%;
 }
 .red-text {
